# master-of-schedule

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  index.html  package-lock.json  package.json  vite.config.ts  Прочитай!.txt
.github/workflows/: deploy-website.yml  release-workload.yml  release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/db/: data.ts  database.ts  downloadFolder.ts  import-export.test.ts  import-export.ts  index.ts  partnerFiles.ts  versions.ts
src/hooks/: useBackupList.ts  useCreateWeeklyModal.test.ts  useCreateWeeklyModal.ts  useDataTable.test.ts  useDataTable.ts  useEditorDialogState.ts  useEditorKeyboard.test.ts  useEditorKeyboard.ts  useMultiFolders.ts
src/logic/: availability.test.ts  availability.ts  counting.test.ts  counting.ts  createScheduledLesson.test.ts  createScheduledLesson.ts  editorFlow.test.ts  editorFlow.ts  export-image-data.test.ts  export-image-data.ts  export-image.ts  index.ts  lessonRequirementMatching.test.ts  lessonRequirementMatching.ts  mergeTemporaryLessons.test.ts  mergeTemporaryLessons.ts  partner.test.ts  partner.ts  traversal.test.ts  validation.test.ts  validation.ts
website/: astro.config.mjs
workload/: CHANGELOG.md  ROADMAP.md  index.html  package-lock.json  package.json  vite.config.ts
workload/src-tauri/: Cargo.toml  tauri.conf.json
workload/src-tauri/capabilities/: default.json
workload/src-tauri/icons/: icon.icns
workload/src-tauri/src/: lib.rs  main.rs
(+119 files in other folders)
